style(merlin-www-main-navigation): fix main header height to overflow covers offer on homepage

--- a/packages/merlin-www-main-navigation/sass/gq/_base.scss
+++ b/packages/merlin-www-main-navigation/sass/gq/_base.scss
@@ -17,6 +17,7 @@
 }
 
 .n-main__header {
+    height: 140px;
     text-align: center;
 }
 
